Update to simulation folder
Updates:
1. Reproduction_need.py added (see script for more info) NOTE: script is not yet clean so the code is messy and may be hard to read
2.Some updates to snake game with js such as start and reset buttons

--- a/Projects/Snake project/snake.html
+++ b/Projects/Snake project/snake.html
@@ -7,5 +7,7 @@
 
     <body>
         <div id="game-board"></div>
+        <button onclick="main()">Start</button>
+        <button onclick="restart()">Reset</button>
     </body>
 </html>
