--- a/HTML CSS and JS/Labs/TreasureHunt/TreasureQuest.html
+++ b/HTML CSS and JS/Labs/TreasureHunt/TreasureQuest.html
@@ -27,6 +27,6 @@
         <!--jQuery library code-->
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
-        <script src="G:\My Drive\Programing\Labs\TreasureHunt\TQScript.JS"></script>
+        <script src="G:\My Drive\Programing\HTML CSS and JS\Labs\TreasureHunt\TQScript.JS"></script>
     </body>
 </html>
