--- a/HTML CSS and JS/Projects/Snake project/snake.html
+++ b/HTML CSS and JS/Projects/Snake project/snake.html
@@ -9,5 +9,6 @@
         <div id="game-board"></div>
         <button onclick="main()">Start</button>
         <button onclick="restart()">Reset</button>
+        <p id="score">Score: 0</p>
     </body>
 </html>
